--- a/index.html
+++ b/index.html
@@ -46,52 +46,70 @@
           </nav>
     </div>
     <!--Carousel of product-->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <div class="bg-carousel-2">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="container row">
+              <div class="col-5">
+                <article>
+                  <h1>MacBook Pro</h1>
+                  <p>Here will be the details. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </article>
+                <button type="button" class="btn btn-dark">Buy Now</button>
+              </div>
+              <!--middle backgorund-->
+              <div class="col-2 bg-middle"></div>
+              <div class="col-5">
+                <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container row">
+              <div class="col-5">
+                <article class="d-flex align-items-center">
+                  <p>Here will be the details. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </article>
+                <button type="button" class="btn btn-dark">Buy Now</button>
+              </div>
+               <!--middle backgorund-->
+               <div class="col-2 bg-middle"></div>
+              <div class="col-5">
+                <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container row">
+              <div class="col-5">
+                <article class="d-flex align-items-center">
+                  <p>Here will be the details. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </article>
+                <button type="button" class="btn btn-dark">Buy Now</button>
+              </div>
+               <!--middle backgorund-->
+               <div class="col-2 bg-middle"></div>
+              <div class="col-5">
+                <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <div class="container row">
-            <div class="col-6">
-              <p>Here will be the details</p>
-            </div>
-            <div class="col-6">
-              <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container row">
-            <div class="col-6">
-              <p>Here will be the details</p>
-            </div>
-            <div class="col-6">
-              <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="container row">
-            <div class="col-6">
-              <p>Here will be the details</p>
-            </div>
-            <div class="col-6">
-              <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
-            </div>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
     </div>
     <!--Card of Smat Phone Product-->
     <div class="card-group container card-margin">
@@ -101,7 +119,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
         </div>
       </div>
@@ -111,7 +129,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
         </div>
       </div>
@@ -121,7 +139,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
         </div>
       </div>
@@ -134,7 +152,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
         </div>
       </div>
@@ -144,7 +162,7 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
         </div>
       </div>
@@ -154,8 +172,29 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         </div>
-        <div class="card-footer">
+        <div class="card-footer d-flex justify-content-center">
           <button type="button" class="btn btn-dark">Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+    <!--Catagories section-->
+    <div class="container">
+      <h1 class="d-flex justify-content-center">Catagories</h1>
+      <div class="row">
+        <div class="col-3 d-flex justify-content-center align-items-center">
+          <img class="border-cat" src="images/Categories/bag.png">
+        </div>
+        <div class="col-3 d-flex flex-column justify-content-center">
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="border-cat" src="images/Categories/perfume.png">
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="border-cat" src="images/Categories/shoe.png">
+          </div>
+        </div>
+        <div class="col-6 d-flex justify-content-center align-items-center">
+          <img class="w-100" src="images/Categories/pale-order.png">
         </div>
       </div>
     </div>
