nav edited and footer edited

--- a/index.html
+++ b/index.html
@@ -10,41 +10,39 @@
     <title>Boostrap Based Design</title>
 </head>
 <body>
-  <!--Navigation Bar-->
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
-              <div class="d-flex align-items-start">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="products" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Products
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="smart-phone">Smart Phone</a></li>
-                        <li><a class="dropdown-item" href="laptop">Laptop</a></li>
-                      </ul>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="about-us">About us</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact-us">Contact us</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </div>
+  <!--Header file-->
+  <header class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"><img class="w-50" src="images/logo.png"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Products
+                </a>
+                <ul class="dropdown-menu navbar-light" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#laptop">Laptop</a></li>
+                  <li><a class="dropdown-item" href="#smart-phone">Smart Phone</a></li>
+                </ul>
+              </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
     <!--Carousel of product-->
     <div class="bg-carousel-2">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -112,7 +110,7 @@
       </div>
     </div>
     <!--Card of Smat Phone Product-->
-    <div class="card-group container card-margin">
+    <div id="smart-phone" class="card-group container card-margin">
       <div class="card">
         <img src="images/phone/phone-1.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -145,7 +143,7 @@
       </div>
     </div>
     <!--card of Laptop Product-->
-    <div class="card-group container card-margin">
+    <div id="laptop" class="card-group container card-margin">
       <div class="card">
         <img src="images/laptop/product-1.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -198,6 +196,12 @@
         </div>
       </div>
     </div>
+    <!--footer-->
+    <footer">
+      <div class="container footer">
+        <h3>&copy;Created by Md. Zahid Sarker</h3>
+      </div>
+    </footer>
 
     <!--js link file-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
